welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
    def hunt(c:Color) {
do{
	if(isFacingTrail(c) == true){
		avance();print();
	}else{
		gauche();isFacingTrail();
	}	
}while(!estSurBiscuit);prendBiscuit();
}
   
def isFacingTrail(c:Color):Boolean = {
var test = false;
if(!estFaceMur){
	avance();
	if(getCouleurSol() == c){
		test = true;recule();
	}else{
		test = false;recule();
	}
}else{
		test = false;
}
 return test;   
}     
def print() {baisseBrosse();leveBrosse()}








